ALL DIRTY DB WORK DONE (except filling_db)

--- a/asksp00ky/templates/components/likes-count.html
+++ b/asksp00ky/templates/components/likes-count.html
@@ -1,5 +1,5 @@
 <div class="question-likes d-flex align-items-center">
-    <div class="col-2 like-value d-flex align-items-center">{{ likes_count }}</div>
+    <div class="col-2 like-value d-flex align-items-center">{{ rating.get_total_rating }}</div>
     <div class="col-2 like-buttons d-flex align-items-center">
         <button class="btn like-button"><i>+</i></button>
     </div>
