--- a/asksp00ky/templates/layouts/registered.html
+++ b/asksp00ky/templates/layouts/registered.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-4">
         <div class="profile-image">
-        <img src="{% static 'img/profile.png' %}" alt="Profile Picture" class="img-fluid" style="border: 1px solid white;">
+        <img src="{% static profile.avatar %}" alt="Profile Picture" class="img-fluid" style="border: 1px solid white;">
         </div>
     </div>
     <div class="col-8">
